reference table customer only alignment issue fixed

--- a/src/styles/apps/cloudpricing/priceZoneReassignment/_priceZone.scss
+++ b/src/styles/apps/cloudpricing/priceZoneReassignment/_priceZone.scss
@@ -59,7 +59,7 @@
   border-radius: 0.9rem;
   background: white;
   border: 0.076rem solid rgba(98, 115, 126, 0.25);
-  
+
   .ant-tabs {
     width: 100%;
 
@@ -70,10 +70,10 @@
     .ant-tabs-nav {
       margin: 0 !important;
 
-      .ant-tabs-tab{
-        background:none;
+      .ant-tabs-tab {
+        background: none;
       }
-      .ant-tabs-tab-active{
+      .ant-tabs-tab-active {
         background: #fff !important;
       }
     }
@@ -159,7 +159,6 @@
               overflow: hidden;
               text-overflow: ellipsis;
               white-space: nowrap;
-              
             }
             .pz-customer-group-bottom {
               display: flex;
@@ -601,13 +600,13 @@
   justify-content: space-evenly;
   padding: 0rem 1rem;
 
-  .pz-aprove-done{
-    background:$syscogreen;
-    width:10rem;
+  .pz-aprove-done {
+    background: $syscogreen;
+    width: 10rem;
     text-align: center;
-    padding:0.5rem;
-    font-size:1.1rem;
-    color:#fff;
+    padding: 0.5rem;
+    font-size: 1.1rem;
+    color: #fff;
     font-weight: 600;
     border-radius: 0.5rem;
     display: flex;
@@ -620,11 +619,7 @@
     padding: 0.6rem 2rem;
     font-weight: 600;
     background: rgb(70, 155, 67);
-    background: linear-gradient(
-      180deg,
-      rgb(56, 182, 17) 7%,
-      $syscogreen 100%
-    );
+    background: linear-gradient(180deg, rgb(56, 182, 17) 7%, $syscogreen 100%);
   }
   .reject-btn {
     margin-left: 5px;
@@ -836,6 +831,13 @@
           font-weight: 500;
         }
 
+        .pop-sum-tag-customer {
+          height: 4.6rem;
+          font-size: 2.1rem;
+          color: $textstandard;
+          font-weight: 700;
+        }
+
         .pop-sum-tag {
           background: #76e0f6;
           text-align: center;
@@ -872,24 +874,25 @@
 
 //reference table pagination styles
 
-.pz-pop-table-pagination{
-  margin-top:1.2rem;
-  width:100%;
+.pz-pop-table-pagination {
+  margin-top: 1.2rem;
+  width: 100%;
   display: flex;
   justify-content: flex-end;
 
-  .ant-pagination-item-active{
-    color:#fff;
-  }
-  .ant-pagination-item-active:focus a, .ant-pagination-item-active:hover a {
+  .ant-pagination-item-active {
     color: #fff;
+  }
+  .ant-pagination-item-active:focus a,
+  .ant-pagination-item-active:hover a {
+    color: #fff;
+  }
 }
-}
-
 
 // added pagination styles to global level
 
-.ant-pagination-item-active:focus a, .ant-pagination-item-active:hover a {
+.ant-pagination-item-active:focus a,
+.ant-pagination-item-active:hover a {
   color: #fff;
 }
 
@@ -983,22 +986,20 @@
 
 // pz error block
 
-.pz-error-block{
-  
+.pz-error-block {
   position: relative;
-  font-size:1.5rem;
+  font-size: 1.5rem;
   margin: 1.5rem 0.2rem;
   padding-left: 1rem;
-  color:$syscored;
+  color: $syscored;
 
-  &::before{
-    position:absolute;
-    top:0;
-    left:0;
-    height:100%;
-    width:2rem;
-    border-left:1.5px dashed $syscored;
-    content: '';
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 2rem;
+    border-left: 1.5px dashed $syscored;
+    content: "";
   }
-
 }
